<resources>
    <string name="app_name">Speechix</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to Speechix</string>
    <string name="create_new_script">In order to create or a new script,\n tap the button
    in the bottom right\n hand corner.</string>
    <string name="title_activity_add_new_script">AddNewScriptActivity</string>
    <string name="add_new_script">Add new script</string>
    <string name="script_name">Script Name</string>
    <string name="script_body">Script Body</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_read">ReadActivity</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="title_activity_edit_script">EditScriptActivity</string>
    <string name="edit_script">Edit Script</string>
    <string name="save">Save</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="import_from">Import</string>
    <string name="make_sure">"Please make sure that the file has '.txt' extension"</string>
    <string name="got_it">Got it</string>
    <string name="font_size">Font Size</string>

    <string name="title_activity_read_fullscreen">ReadFullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="background_color">Background color</string>
    <string name="text_color">Text color</string>
    <string name="speed">Speed</string>
    <string name="scroll">Scroll</string>
    <string name="pixels">pixels</string>
    <string name="in">in</string>
    <string name="milliseconds">milli\nseconds</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="or_sign_up">Or Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="highlighter">Highlighter</string>
    <string name="t">T</string>
    <string name="mirror_mode">Mirror Mode</string>
    <string name="mirrored">Mirrored</string>
    <string name="action_search">Search</string>
    <string name="title_activity_read_nav_dr">ReadNavDrActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="login_or_sign_up">Login or Sign Up</string>
    <string name="you_are_not_logged_in">You are not logged in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="record_video">Record Video</string>

    <string name="title_activity_read_fullscreen_camera">ReadFullscreenCameraActivity</string>
    <string name="orientation">Orientation</string>
    <string name="lock_in_portrait">Lock in Portrait Mode</string>
    <string name="lock_in_landscape_mode">Lock in landscape mode</string>
    <string name="auto_orientation">Auto orientation</string>
    <string name="help">Help</string>
    <string name="lock_icon">Lock Icon</string>
    <string name="script_card">Script Card</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>
