<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark_grey_terrazzo"
    tools:context=".authentication.AuthenticationActivity"
    tools:layout_editor_absoluteY="81dp">

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="210dp"
        android:layout_height="151dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012"
        app:srcCompat="@drawable/ic_person_black_24dp" />

    <android.support.design.widget.TextInputLayout

        android:id="@+id/emailAuthInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2d2d2d80"
        android:textColorHint="#C0C0C0"
        app:hintTextAppearance="@style/text_input_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.43">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/auth_activity_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="#DCDCDC"
            android:textColorHint="#C0C0C0"
            android:theme="@style/MyEditTextStyle2" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout

        android:id="@+id/passwordAuthTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2d2d2d80"
        android:textColorHint="#C0C0C0"
        app:hintTextAppearance="@style/text_input_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/auth_activity_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#DCDCDC"
            android:textColorHint="#C0C0C0"
            android:theme="@style/MyEditTextStyle2" />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/authConfirmPasswordTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2d2d2d80"
        android:textColorHint="#C0C0C0"
        android:visibility="gone"
        app:hintTextAppearance="@style/text_input_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.69">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/auth_activity_confirm_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColor="#DCDCDC"
            android:textColorHint="#C0C0C0"
            android:theme="@style/MyEditTextStyle2" />

    </android.support.design.widget.TextInputLayout>


    <ProgressBar

        android:id="@+id/auth_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />


    <Button
        android:id="@+id/auth_activity_login_or_sign_up_button"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="2dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/login_or_sign_up_text_view"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="2dp"
        android:gravity="center"
        android:text="@string/or_sign_up"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98" />

</android.support.constraint.ConstraintLayout>