<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark_grey_terrazzo"
    tools:context=".ChangePasswordActivity">

    <ImageView
        android:contentDescription="@string/lock_icon"
        android:id="@+id/imageView4"
        android:layout_width="139dp"
        android:layout_height="145dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.120000005"
        app:srcCompat="@drawable/ic_lock_red_24dp" />

    <android.support.design.widget.TextInputLayout

        android:id="@+id/changePasswordTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2d2d2d80"
        android:textColorHint="#C0C0C0"
        app:hintTextAppearance="@style/text_input_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.51">


        <android.support.design.widget.TextInputEditText
            android:id="@+id/change_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:textColor="#DCDCDC"
            android:textColorHint="#C0C0C0"
            android:theme="@style/MyEditTextStyle2" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout

        android:id="@+id/changeConfirmPasswordTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2d2d2d80"
        android:textColorHint="#C0C0C0"
        app:hintTextAppearance="@style/text_input_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.62">


        <android.support.design.widget.TextInputEditText
            android:id="@+id/change_confirm_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColor="#DCDCDC"
            android:textColorHint="#C0C0C0"
            android:theme="@style/MyEditTextStyle2" />
    </android.support.design.widget.TextInputLayout>

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/change_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        app:fb_defaultColor="#7ab800"
        app:fb_focusColor="#9bd823"
        app:fb_radius="30dp"
        app:fb_text="Change Password"
        app:fb_textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <ProgressBar
        android:visibility="invisible"
        android:id="@+id/change_password_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.76" />


</android.support.constraint.ConstraintLayout>